<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/dataLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">
            <TextView
                android:textSize="20dp"
                android:id="@+id/textName"
                android:layout_marginLeft="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textName" />
            <EditText
                android:id="@+id/editName"
                android:textSize="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/editName"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">
            <TextView
                android:id="@+id/textSurname"
                android:textSize="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textSurname" />
            <EditText
                android:id="@+id/editSurname"
                android:textSize="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/editSurname"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">
            <TextView
                android:textSize="20dp"
                android:id="@+id/textWeb"
                android:layout_marginLeft="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textWeb" />
            <EditText
                android:id="@+id/editWeb"
                android:textSize="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/editWeb"
                android:inputType="textUri"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">
            <TextView
                android:textSize="20dp"
                android:id="@+id/textPhone"
                android:layout_marginLeft="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textPhone" />
            <EditText
                android:id="@+id/editPhone"
                android:textSize="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/editPhone"
                android:inputType="phone"/>
        </LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layautFotter"
        android:layout_width="match_parent"
        android:layout_marginTop="550dp"
        android:layout_height="50dp">
        <Button
            android:id="@+id/button1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@color/colorGreen"
            android:onClick="show"
            android:text="@string/buttonShow" />
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="205dp"
            android:background="@color/colorRed"
            android:onClick="delete"
            android:text="@string/buttonDelete" />
    </LinearLayout>

</RelativeLayout>